# cc-lemma

./: .gitignore  Cargo.toml  README.md  generate-plots.py  runner.py
benchmarks/cclemma/clam/: clam.ceg
benchmarks/cclemma/isaplanner/: isaplanner.ceg
benchmarks/cclemma/optimization/: autolifter-single-pass-0s1s.ceg  autolifter-single-pass-atoi.ceg  autolifter-single-pass-dropwhile.ceg  autolifter-single-pass-max_len_1s.ceg  autolifter-single-pass-mis.ceg  autolifter-single-pass-mps.ceg  autolifter-single-pass-mts.ceg  autolifter-single-pass-sum.ceg  fusion-algprog-ex3.14.ceg  fusion-identities-page5.ceg  fusion-shortcut-page1.ceg  fusion-tupling-page8.ceg  mtp-base.ceg  (+40 more)
dataset_script/results/: thesy-no-expl-proofs.csv
dataset_script/runner/: cache.py  cclemma_runner.py  config.py  cvc_runner.py  hipspec_runner.py  runner.py  thesy_runner.py
docs/: file-format.md
examples/: add.ceg  clam-test.ceg  clam.ceg  clam_no_lemmas.ceg  clam_no_lemmas_no_quantification.ceg  clam_with_lemmas.ceg  cycleq-proofs.txt  isaplanner-proofs.txt  isaplanner-test.ceg  isaplanner.ceg  mtp-new.ceg  mtp.ceg  mts.ceg  mts2.ceg  mutual-proofs.txt  prop_30_scratch.txt  test.ceg
precomputed-results/cclemma/: optimization.csv
precomputed-results/hipspec/: clam.csv
scripts/: cclemma_runner.py  config.py  cvc_runner.py  hipspec_runner.py  thesy_runner.py  thesy_stats_postprocessor.py  thesy_stats_processor.py  util.py
src/: analysis.rs  ast.rs  config.rs  egraph.rs  explain.rs  goal.rs  goal_graph.rs  lemma_tree.rs  main.rs  parser.rs  utils.rs
tools/: visualize-lemma-tree.html
(+674 files in other folders)
